Remove inert-visual-viewport flag (enabled by default)

This patch remove the --enable-inert-visual-viewport flag from Chrome.
This does *not* remove the inertVisualViewport setting from Blink. This
feature is currently on by default but it was accidentally forced to the
off state by the existence of the command line flag. By removing the
flag, the Blink setting controls the status of this switch.

Note: we're not losing anything as the feature is intended to be on by
default and we didn't have a matching --disable-inert-visual-viewport
flag so this flag would have been useless as of M61.

Bug: 740956
Change-Id: I249a34b4ee67dfbe8230e6bc3048871a6325e43d