content/browser/renderer_host/render_process_host_impl.cc
@@ -2346,7 +2346,6 @@ void RenderProcessHostImpl::PropagateBrowserCommandLineToRenderer(
     switches::kForceOverlayFullscreenVideo,
     switches::kFullMemoryCrashReport,
     switches::kIgnoreAutoplayRestrictionsForTests,
-    switches::kInertVisualViewport,
     switches::kIPCConnectionTimeout,
     switches::kIsolateOrigins,
     switches::kIsRunningInMash,
